# ERMiner-CPP

./: .gitignore  CMakeLists.txt  README.md  cppTemplate  erminer  main.cpp  runERMinerTests  runItemsetTests  runRulesTests
data/: rules.csv
doc/html/: README_8md.html  annotated.html  annotated_dup.js  classERMiner.html  classERMiner.js  classItemset.html  classItemset.js  classItemset__coll__graph.map  classItemset_acc8325b8fe7289c6662465361aa98942_icgraph.map  classRule__coll__graph.map  classRule__coll__graph.md5  classRule_a41f7ccd767a57ead220c52f3f47ca0c3_icgraph.md5  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  erminer_8hpp.js  erminer_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.js  inherit_graph_0.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.md5  inherits.html  itemset_8hpp.html  itemset_8hpp.js  itemset_8hpp__incl.map  itemset_8hpp__incl.md5  itemset_8hpp_source.html  menudata.js  namespaces.html  navtreedata.js  (+9 more)
doc/latex/: classERMiner__coll__graph.md5  classERMiner_ab29fae7cd2ca1f11e9df71c8e93f66cb_cgraph.md5  classItemset.tex  classRule__coll__graph.md5  classRule_a41f7ccd767a57ead220c52f3f47ca0c3_icgraph.md5  erminer_8hpp.tex  itemset_8hpp.tex  itemset_8hpp__dep__incl.md5  itemset_8hpp__incl.md5  namespaces.tex  refman.tex  rules_8hpp.tex  rules_8hpp__incl.md5  rules_8hpp_source.tex  structstd_1_1hash_3_01Itemset_01_4.tex  structstd_1_1hash_3_01Rule_01_4.tex
docs/: index.html
docs/def/: doxygen.def
docs/html/: classERMiner-members.html  classERMiner__coll__graph.map  classERMiner_ab29fae7cd2ca1f11e9df71c8e93f66cb_cgraph.map  classERMiner_ab29fae7cd2ca1f11e9df71c8e93f66cb_cgraph.md5  classItemset-members.html  classItemset__inherit__graph.md5  classItemset_aaf4d824715835cf743eb1ce22267355f_icgraph.map  classItemset_aaf4d824715835cf743eb1ce22267355f_icgraph.md5  classItemset_acc8325b8fe7289c6662465361aa98942_icgraph.md5  classRule-members.html  classRule.html  classRule.js  classRule_a41f7ccd767a57ead220c52f3f47ca0c3_icgraph.map  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  erminer_8hpp.html  erminer_8hpp__incl.map  erminer_8hpp__incl.md5  index.html  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_4.map  itemset_8hpp__dep__incl.map  itemset_8hpp__dep__incl.md5  namespacestd.html  namespacestd.js  rules_8hpp.html  rules_8hpp.js  rules_8hpp__dep__incl.md5  rules_8hpp__incl.map  structstd_1_1hash_3_01Itemset_01_4.html  structstd_1_1hash_3_01Itemset_01_4.js  structstd_1_1hash_3_01Itemset_01_4__coll__graph.md5  structstd_1_1hash_3_01Itemset_01_4_a41da9ffc5ac52e4c6857365a80ac5584_cgraph.md5  structstd_1_1hash_3_01Rule_01_4.html  structstd_1_1hash_3_01Rule_01_4.js  structstd_1_1hash_3_01Rule_01_4__coll__graph.map  (+1 more)
docs/latex/: annotated.tex  files.tex  (+16 more)
include/: erminer.hpp  itemset.hpp  rules.hpp
lib/: CMakeLists.txt
source/: erminer.cpp  itemset.cpp  rules.cpp
tests/: test_erminer.cpp  test_itemset.cpp  test_rules.cpp
(+50 files in other folders)
